--- a/configs/1_confif.yaml
+++ b/configs/1_confif.yaml
@@ -1,3 +1,3 @@
-inputdir: input path of migale database
-outputdir: output directory path
-workdir: work directory
+inputdir: /db/gb_bacteria/current/flat/
+outputdir: /work_projet/isp-pgba/ouleye/PPR_MGEproject/migale_data_1
+workdir: /home/osidibe/work/PPR_MGEproject/snakemakes/import_Data_1
