--- a/configs/1_confif.yaml
+++ b/configs/1_confif.yaml
@@ -1,3 +1,3 @@
-inputdir: ftp path
+inputdir: https://ftp.ncbi.nlm.nih.gov/genomes/all/GCF/***/***/***/accessionv1_translated_cds.faa	
 outputdir: /path/to/project/output/
 workdir: /path/to/project/workdir/
