--- a/configs/1_config.yaml
+++ b/configs/1_config.yaml
@@ -1,26 +1,26 @@
 # ===== INPUT =====
-#  RefSeq / GenBank FTP path
+# RefSeq / GenBank FTP path
 
-inputdir: input directory with genbank annotation files
+inputdir: input directory with GenBank annotation files
 
-# ===== INPUT aND OUTPUT DIRECTORIES =====
+# ===== INPUT AND OUTPUT DIRECTORIES =====
 outputdir:
-  migale_data: input directory with refseq annotation download files of translated cds
-  import_Data_1: output directory with report fle for downloaded Refseq data
-  blastp_Groups_2: output directory for blastp results
+  migale_data: input directory with RefSeq annotation download files of translated CDS
+  import_Data_1: output directory with report file for downloaded RefSeq data
+  blastp_Groups_2: output directory for BLASTp results
 
 # Output directory for protein clustering
-outputdir2: output directory of PPR REL and REC create database for clustering step
+outputdir2: output directory of PPR REL and REC database created for the clustering step
 
 # Snakemake working directory
-workdir: snakemakes working directory
+workdir: Snakemake working directory
 
 # ===== BLAST / FILTERING PARAMETERS =====
 min_identity: 50
 min_coverage: 95
 CDS_interval: 10
 
-# ===== Proteins parameters for blastp resulst analysis =====
+# ===== Protein parameters for BLASTp result analysis =====
 TET: Tet(W)
 
 proteins:
@@ -32,17 +32,21 @@ MGE:
   - protein=relaxase
   - protein=recombinase
 
-groups repository (TetMGE = IME_Rho_tet genomes, MGE= IME_Rho genomes, Tet = RPP genomes) :
+# Groups repository name
+# TetMGE = IME_Rho_tet genomes
+# MGE    = IME_Rho genomes
+# Tet    = RPP genomes
+groups_repository:
   - g_TetMGE
   - g_MGE
   - g_Tet
 
-# ===== REFERENCE FILES for database creation =====
+# ===== REFERENCE FILES FOR DATABASE CREATION =====
 ref_file:
-  r1: PPR reference sequence from resfinder database
-  r2: canonical sequence reference of relaxase
-  r3: canonical sequence reference of recombinase
+  r1: PPR reference sequence from the ResFinder database
+  r2: canonical reference sequence of relaxase
+  r3: canonical reference sequence of recombinase
 
 # ===== REPORTS / METADATA =====
-report_1: /path/to/metadata/dataReport_1.csv
-taxonomie_1: NCBI taxonomie file for bacillota and actinomycetota data retravaillé
+report_1: report file containing the number of annotations in RefSeq translated CDS files for each species
+taxonomie_1: NCBI taxonomy file for Bacillota and Actinomycetota data (reworked)
