--- a/configs/2_config.yaml
+++ b/configs/2_config.yaml
@@ -1,31 +1,31 @@
-# General configuration for the Protein clustering
+# General configuration for protein clustering
 # Paths are generic for public use
 
 # Working directories
-workdir: /path/to/workdir
-outputdir: /path/to/outputdir
-inputdir: /path/to/inputdir
-faa_dir: /path/to/faa_dir
+workdir: Snakemake working directory
+outputdir: output directory for clustering output files
+inputdir: input directory containing databases created in step 1
+faa_dir: directory containing RefSeq downloaded files
 
 # Reference file
-refseq_t: /path/to/RefseqFINALE.csv
+refseq_t: summary_table_1 path
 
 # Clustering threshold
 threshold: 0.9
 
-# Proteins of interest
+# Protein names of interest in BLASTp result files
 proteins:
   - Tet(W)
   - protein=relaxase
   - protein=recombinase
 
-# Simplified protein names
+# Protein name extensions for clusters
 prot_name:
   - TET
   - REL
   - REC
 
-# Groups name
+# Group names
 groups:
   - g_TetMGE
   - g_MGE
